--- a/css/app.css
+++ b/css/app.css
@@ -84,7 +84,7 @@ button {
 	top: 0;
 	width: 900px;
 	height: 100%;
-	background-image: url('https://lord-blizzard.github.io/auto-eval-frontend/img/background.jpg');
+	background-image: url('../img/background.jpg');
 	background-size: cover;
 	transition: transform 1.2s ease-in-out;
 }
